k8s/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-ratings
  namespace: student5-bookinfo-dev
  labels:
    app: bookinfo-dev-ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-ratings
  template:
    metadata:
      labels:
        app: bookinfo-dev-ratings
    spec:
      containers:
      - name: bookinfo-dev-ratings
        image: ghcr.io/exzenous/bookinfo-ratings:dev
        imagePullPolicy: Always # Always required! - docker pull on new version of app or not
        # If not present - not always
      imagePullSecrets: # Use which secret
      - name: registry-bookinfo
