k8s/ratings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx # Name of Ingress Controller(can have multiple controller)
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Redirect
  name: bookinfo-dev-ratings
  namespace: student5-bookinfo-dev
spec:
  rules:
  - host: itkmitl.bookinfo.dev.opsta.net
    http:
      paths:
      - path: /student5/ratings(/|$)(.*) 
      # Normally our app takes /health directly but this Ingress will have /studentX/ratings/ in front so, we need to eliminate /studentX/ratings and redirect to give a correct parameter to app instead
      # [domain]/studentX/ratings/health -> [domain]/health
      # Regular Expression
        pathType: Prefix
        backend:
          service:
            name: bookinfo-dev-ratings
            port:
              number: 8080
